# PacketGod

./: .gitignore  CMakeLists.txt  README.md
src/: DebugLog.cpp  DebugLog.h  Define.h  OpcodeList.inc  Opcodes.h  dllmain.cpp
src/hooks/: D3DHooks.cpp  D3DHooks.h  HookManager.cpp  HookManager.h  PacketHooks.cpp  PacketHooks.h
src/packet/: PacketCapture.cpp  PacketCapture.h  PacketReplay.cpp  PacketReplay.h
src/ui/: PacketUI.cpp  PacketUI.h
src/wow/: GameFunctions.h  Offsets.h  WowTypes.h
